# Electrogram

./: .gitignore  AGENTS.md  add_assertions.py  build-docs.sh  current_errors_10.txt  current_errors_11.txt  current_errors_3.txt  current_errors_4.txt  current_errors_5.txt  current_errors_6.txt  current_errors_7.txt  current_errors_final.txt  final_check.txt  final_fix.py  fix_message_v3.py  fix_message_v4.py  fix_message_v5.py  fix_message_v6.py  fix_message_v7.py  fix_message_v8.py  generate_raw.py  hatch_build.py  message_part1.txt  message_part2.txt  message_part3.txt  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements.in  requirements.txt  sphinx_output.txt  ty_check_output.txt  ty_check_output_v2.txt  ty_check_output_v3.txt  ty_check_output_v4.txt  ty_check_output_v5.txt  ty_check_output_v6.txt  ty_check_output_v7.txt  (+12 more)
.github/workflows/: docs_gen.yml  error_scrape.yml  fetch_mtproto.yml  format_and_test.yml  tag_and_publish.yml
compiler/api/: compiler.py  docs.json  scrape_docs.py
compiler/api/source/: main_api.tl
compiler/api/template/: combinator.txt  type.txt
compiler/docs/: compiler.py  tl_generator.py
compiler/docs/template/: page.txt
compiler/errors/: compiler.py
compiler/errors/source/: 400_BAD_REQUEST.tsv  403_FORBIDDEN.tsv  500_INTERNAL_SERVER_ERROR.tsv
dev_tools/: check_api_schema_updates.py
docs/source/: conf.py  index.rst  support.rst
docs/source/api/: decorators.rst
docs/source/faq/: socket-send-oserror-timeouterror-connection-lost-reset.rst
docs/source/intro/: install.rst
docs/source/topics/: scheduling.rst
pyrogram/: __init__.py  client.py  dispatcher.py  file_id.py  filters.py  utils.py
pyrogram/connection/: connection.py
pyrogram/crypto/: aes.py
pyrogram/enums/: __init__.py  button_style.py  chat_action.py  message_service_type.py
pyrogram/errors/: rpc_error.py
pyrogram/errors/exceptions/: __init__.py  all.py  bad_request_400.py  flood_420.py  forbidden_403.py  internal_server_error_500.py  not_acceptable_406.py  see_other_303.py  service_unavailable_503.py  unauthorized_401.py
pyrogram/handlers/: conversation_handler.py  deleted_bot_business_messages_handler.py  deleted_messages_handler.py  handler.py
pyrogram/methods/: __init__.py
pyrogram/methods/account/: get_privacy.py  set_privacy.py
pyrogram/methods/advanced/: resolve_peer.py  save_file.py
pyrogram/methods/auth/: check_password.py  recover_password.py  send_code.py  sign_in.py  sign_in_bot.py  sign_up.py
pyrogram/methods/bots/: __init__.py  answer_inline_query.py  answer_web_app_query.py  can_send_message.py  delete_bot_commands.py  get_bot_commands.py  get_bot_info.py  get_chat_menu_button.py  get_collectible_item_info.py  get_game_high_scores.py  get_inline_bot_results.py  request_callback_answer.py  send_game.py  send_inline_bot_result.py  set_bot_commands.py  set_bot_default_privileges.py  set_bot_info.py  set_chat_menu_button.py  set_game_score.py
pyrogram/methods/business/: __init__.py  answer_shipping_query.py  create_invoice_link.py  get_business_connection.py  get_payment_form.py  get_stars_transactions.py  get_stars_transactions_by_id.py  get_user_gifts.py  refund_stars_charge.py  refund_stars_payment.py  sell_gift.py  send_gift.py  send_invoice.py  send_payment_form.py  toggle_gift_is_saved.py
pyrogram/methods/chats/: add_chat_members.py  archive_chats.py  ban_chat_member.py  create_channel.py  create_forum_topic.py  create_group.py  create_supergroup.py  delete_channel.py  delete_chat_photo.py  delete_supergroup.py  delete_user_history.py  export_folder_link.py  get_chat.py  get_chat_event_log.py  get_chat_member.py  get_chat_members.py  get_chat_members_count.py  get_chat_online_count.py  get_dialogs.py  get_folders.py  get_forum_topics_by_id.py  get_send_as_chats.py  join_chat.py  leave_chat.py  mark_chat_unread.py  pin_chat_message.py  promote_chat_member.py  restrict_chat_member.py  set_administrator_title.py  set_chat_permissions.py  set_chat_photo.py  set_chat_protected_content.py  set_chat_title.py  set_chat_username.py  set_send_as_chat.py  set_slow_mode.py  unarchive_chats.py  unban_chat_member.py  unpin_all_chat_messages.py  unpin_chat_message.py  (+2 more)
pyrogram/methods/contacts/: add_contact.py  delete_contacts.py  import_contacts.py
pyrogram/methods/decorators/: on_bot_business_connect.py  on_bot_business_message.py  on_callback_query.py  on_chat_join_request.py  on_chat_member_updated.py  on_chosen_inline_result.py  on_deleted_bot_business_messages.py  on_deleted_messages.py  on_disconnect.py  on_edited_bot_business_message.py  on_edited_message.py  on_inline_query.py  on_message.py  on_message_reaction_count_updated.py  on_message_reaction_updated.py  on_poll.py  on_pre_checkout_query.py  on_raw_update.py  on_shipping_query.py  on_story.py  on_user_status.py
pyrogram/methods/invite_links/: approve_all_chat_join_requests.py  approve_chat_join_request.py  create_chat_invite_link.py  decline_all_chat_join_requests.py  decline_chat_join_request.py  delete_chat_admin_invite_links.py  delete_chat_invite_link.py  edit_chat_invite_link.py  export_chat_invite_link.py  get_chat_admin_invite_links.py  get_chat_admin_invite_links_count.py  get_chat_admins_with_invite_links.py  get_chat_invite_link.py  get_chat_invite_link_joiners.py  get_chat_invite_link_joiners_count.py  get_chat_join_requests.py  revoke_chat_invite_link.py
pyrogram/methods/messages/: __init__.py  copy_media_group.py  copy_message.py  delete_chat_history.py  delete_messages.py  delete_scheduled_messages.py  edit_inline_caption.py  edit_inline_media.py  edit_inline_reply_markup.py  edit_inline_text.py  edit_message_caption.py  edit_message_media.py  edit_message_reply_markup.py  edit_message_text.py  forward_messages.py  get_available_effects.py  get_chat_history.py  (+39 more)
pyrogram/parser/: html.py  parser.py  utils.py
pyrogram/session/: auth.py  session.py
pyrogram/storage/: file_storage.py  sqlite_storage.py  storage.py
pyrogram/types/: __init__.py  list.py  object.py
tests/: test_keyboards.py
(+2589 files in other folders)
