[project]
name = "electrogram"
dynamic = ["version"]
description = "Telegram MTProto API framework in Python, designed for fluid user and bot interactions."
authors = [{ name = "5hojib", email = "yesiamshojib@gmail.com" }]
license = { text = "MIT License" }
dependencies = [
    "pysocks>=1.7.1",
    "aiosqlite>=0.22.1",
    "pymediainfo>=7.0.1",
    "pymongo>=4.16.0",
    "ElectroCrypto>=2.0.2",
    "anyio>=4.12.1",
]
requires-python = ">=3.10"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.hatch.version]
path = "pyrogram/__init__.py"

[tool.hatch.build.hooks.custom]

[project.urls]
homepage = "https://github.com/5hojib/electrogram"
community = "https://t.me/ProjectAeon"
repository = "https://github.com/5hojib/electrogram"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "hatch>=1.16.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "twine>=6.2.0"
]

docs = [
    "sphinx<10.0.0",
    "sphinx-immaterial>=0.13.9",
    "sphinx_copybutton>=0.5.2",
    "sphinx-autobuild",
    "tornado>=6.5.4"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    ".gitignore"
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = [
    "pyrogram"
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 85
target-version = "py310"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 50

[tool.ruff.lint]
select = [
    "E",        # pycodestyle: error
    "F",        # pyflakes
    "I",        # isort
    "W",        # pycodestyle: warning
    "B",        # flake8-bugbear
    "G",        # flake8-logging-format
    "N",        # pep8-naming
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "FA",       # flake8-future-annotations
    "PL",       # pylint
    "PIE",      # flake8-pie
    "PYI",      # flake8-pyi
    "PTH",      # flake8-use-pathlib
    "RET",      # flake8-return
    "RUF",      # ruff
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
    "TID",      # flake8-tidy-imports
    "ARG",      # flake8-unused-arguments
    "C90",      # mccabe
    "COM",      # flake8-commas
    "FURB",     # refurb
    "PERF",     # perflint
    "ASYNC",    # flake8-async
]

ignore = [
    "E501",
    "F403",
    "N801",
    "N806",
    "N818",
    "PLR09",
    "COM812", # Don't remove
    "RUF002",
    "SIM115",
    "PERF203",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLR1702",
    "PLW1514",
    "PLW2901",
]

[tool.ty.rules]
unresolved-import = "ignore"
