[project]
name = "electrogram"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Telegram MTProto API framework in Python, designed for fluid user and bot interactions."
authors = [{ name = "5hojib", email = "yesiamshojib@gmail.com" }]
license = { text = "MIT License" }
requires-python = ">=3.10"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.hatch.version]
path = "pyrogram/__init__.py"

[tool.hatch.build.hooks.custom]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt"]
docs = ["requirements-docs.txt"]

[project.urls]
homepage = "https://github.com/AeonOrg/Electrogram"
community = "https://t.me/ProjectAeon"
repository = "https://github.com/AeonOrg/Electrogram"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    ".gitignore"
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = [
    "pyrogram"
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 85
target-version = "py310"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 50

[tool.ruff.lint]
select = [
    "E",        # pycodestyle: error
    "F",        # pyflakes
    "I",        # isort
    "W",        # pycodestyle: warning
    "B",        # flake8-bugbear
    "G",        # flake8-logging-format
    "N",        # pep8-naming
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "FA",       # flake8-future-annotations
    "PL",       # pylint
    "PIE",      # flake8-pie
    "PYI",      # flake8-pyi
    "PTH",      # flake8-use-pathlib
    "RET",      # flake8-return
    "RUF",      # ruff
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
    "TID",      # flake8-tidy-imports
    "ARG",      # flake8-unused-arguments
    "C90",      # mccabe
    "COM",      # flake8-commas
    "FURB",     # refurb
    "PERF",     # perflint
    "ASYNC",    # flake8-async
]

ignore = [
    "E501",
    "F403",
    "N801",
    "N806",
    "N818",
    "PLR09",
    "COM812", # Don't remove
    "RUF002",
    "SIM115",
    "PERF203",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLR1702",
    "PLW1514",
    "PLW2901",
]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
